--- a/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.org
+++ b/elements/site-lisp/entropy-emacs-doc/org/entropy-emacs_introduction.org
@@ -1114,7 +1114,7 @@ want to do so , calling it.
 
 Capture patching redefining func ~org-capture-place-template~ and the
 Org-mode internal unit ~org-datetree--find-create~, both patching for
-them are minor just with adding ~(read-only-mode 0)~ to the key coding
+them are minor just with adding ~(setq buffer-read-only nil)~ to the key coding
 region.
 
 Rest modes of global-readonly-mode was the optionally not suggested
